k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: insurex
  labels:
    app: insurex
    environment: production
