k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: insurex-api
  namespace: insurex
  labels:
    app: insurex-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: insurex-api
